<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nnsoft.teachquickread.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:text="@string/options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnOptions"
                android:layout_margin="@dimen/button_margin" />

            <TextView
                android:text="@string/mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/textView2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:weightSum="1"
                android:id="@+id/rgMode">

                <RadioButton
                    android:text="@string/simple_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton1"
                    android:checked="false" />


                <RadioButton
                    android:text="@string/speed_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/linLayFixedSpeed"
                    android:textAlignment="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/tvFixedSpeed"
                        android:text="@string/speed_of_read_in_word_by_minute"
                        android:layout_weight="10"
                        android:gravity="center|left"
                        android:textSize="@dimen/label_font_size" />

                    <com.travijuu.numberpicker.library.NumberPicker
                        android:id="@+id/npFixedSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                    </com.travijuu.numberpicker.library.NumberPicker>

                </LinearLayout>


                <RadioButton
                    android:text="@string/voice_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton3" />


            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnStart"
                android:text="@string/start"
                android:textSize="36dp"
                android:textColor="@color/colorLightGray"
                android:background="@color/colorPrimary"
                android:maxLines="1"
                android:layout_margin="@dimen/button_margin" />

            <Button
                android:text="@string/records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/button_margin"
                android:id="@+id/btnRecords" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
