<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nnsoft.teachquickread.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGray"
                android:text="@string/common_settings"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvChooseFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_file_for_reading"
                android:textSize="@dimen/label_font_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <!--<TextView-->
                    <!--android:id="@+id/edChooseFileToRead"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:textSize="@dimen/edit_font_size" />-->


                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/spChooseFileToRead"
                    android:textSize="@dimen/edit_font_size"
                    />

                <Button
                    android:id="@+id/btnChooseFile"
                    android:layout_width="42dp"
                    android:layout_height="wrap_content"
                    android:text="..." />

            </LinearLayout>

            <Button
                android:id="@+id/btnClearCache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear_cache"
                />

            <LinearLayout
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvNumWords"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/words_number"
                    android:textSize="@dimen/label_font_size" />

                <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/npNumWords"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:max="1000"
                    app:min="20"
                    app:unit="10"
                    app:value="60" />


            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvFontSize"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/font_size"
                    android:textSize="@dimen/label_font_size" />

                <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/npFontSize"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:max="41"
                    app:min="12"
                    app:value="30" />


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tvMaxWords"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/max_speed"
                    android:textSize="@dimen/label_font_size" />

                <com.travijuu.numberpicker.library.NumberPicker
                    android:id="@+id/npMaxSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:max="500"
                    app:min="10"
                    app:unit="10"
                    app:value="75" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/chSkipVowels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/check_skip_vowels"
                android:textSize="@dimen/label_font_size" />

            <CheckBox
                android:id="@+id/cbUseHyphenation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:text="@string/use_hyphenation"
                android:textSize="@dimen/label_font_size" />

            <TextView
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorLightGray"
                android:text="@string/speed_read_settings"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_marginTop="@dimen/text_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
